--- a/app/expansion-overview-example.html
+++ b/app/expansion-overview-example.html
@@ -1,6 +1,7 @@
 <button mat-raised-button (click)="openAll()">Open All</button>
 
 <mat-accordion #myaccordion="matAccordion" multi="true">
-<hello></hello>
-
+  <div *ngFor='let a of [1,2,3]'>
+<hello ></hello>
+</div>
 </mat-accordion>
