--- a/app/expansion-overview-example.html
+++ b/app/expansion-overview-example.html
@@ -1,7 +1,9 @@
 <button mat-raised-button (click)="openAll()">Open All</button>
 
 <mat-accordion #myaccordion="matAccordion" multi="true">
-  <div *ngFor='let a of [1,2,3]'>
+  <div cdkDragList >
+  <div  *ngFor='let a of [1,2,3]' cdkDrag>
 <hello ></hello>
+</div>
 </div>
 </mat-accordion>
