2 files modified, 3 added

--- a/app/expansion-overview-example.html
+++ b/app/expansion-overview-example.html
@@ -3,7 +3,7 @@
 <mat-accordion #myaccordion="matAccordion" multi="true">
   <div cdkDragList >
   <div  *ngFor='let a of [1,2,3]' cdkDrag>
-<hello ></hello>
+<app-c1 ></app-c1>
 </div>
 </div>
 </mat-accordion>
